style.css
@font-face {
    font-family: OrangeKid;
    src: url(fonts/OrangeKid.otf);
}

@font-face {
    font-family: VPPixel;
    src: url(fonts/VPPixel.otf);
}

:root {
    --padding: 10px;
    --margin: 15px;

    --bg-color: #000000;
    --main-color: #23e000;
    --font-color: #ffffff;
    --accent-color: #04d9ff;

    --text-border: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
    --round-corners: 25px;

    --title-font: "VPPixel", "OrangeKid";
    --main-font: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

header {
    width: 100%;
    margin: 0;
    padding: 0;
    background-color: var(--main-color);
    height: 28px;
    display: flex;
    align-items: center;

}

header p {
    font-weight: bold;
    color: var(--bg-color);
    font-family: var(--main-font);
    margin: 0;
    padding: 0;
    margin-left: var(--margin);
    padding-left: var(--padding);
}

body {
    background-color: var(--bg-color);
    background-image: url(images/starBG5.png);
    font-family: var(--main-font);
    color: var(--font-color);
    margin: 0;
    padding: 0;
}

main {
    margin: var(--margin);
    padding: var(--padding);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--title-font);
    color: var(--main-color);
    text-shadow: var(--text-border);
}

h1 {
    font-size: 140px;
}

/* .container {
    width: 100%;
} */

#banner-section {
    /* border: 1px solid red; */
    height: 500px;
}

#menu-area {
    /* border: 1px solid red; */
    position: relative;
    text-align: center;
    display: flex;
    justify-content: center;
}

#half-moon {
    position: absolute;
    width: 220px;
    top: 120px;
    z-index: 1;
}

#title-area-text {
    z-index: 5;
    position: relative;
    top: 145px;
    left: 50px;
}



#title-description {
    z-index: 5;
    position: relative;
    top: -20px;
    left: 195px;
    font-size: 25px;
}

#ufo {
    position: absolute;
    margin-left: auto;
    margin-right: 0;
    text-align: center;
    /* left: 0; */
    right: 0;
    z-index: 1;
    width: 350px;
}

#menu {
    position: relative;
    z-index: 5;
    background-color: rgba(0, 0, 0, 0.5);
    width: 50%;
    border-radius: var(--round-corners);
    font-size: 30px;
    top: 180px;
    left: 70px;
    /* right: 0; */
}

#menu>li {
    height: 55px;
    /* border: 1px solid red; */
}

/* .nav-item {
    margin-bottom: 0;
} */

.menu-item a {
    text-decoration: none;
}

.nav-link {
    color: var(--font-color);
    text-shadow: var(--text-border);
}

.nav-link:hover {
    text-decoration: underline;
    color: var(--accent-color);
}

